traversal.snake.Snake.scala.error
Compilation error:
Snake:3: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  if (estFaceMur()) {
  ^Snake:10: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return bool
  ^